--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -28,3 +28,9 @@
     -fx-text-fill: #000000;
     -fx-cursor: hand;
 }
+
+
+.messages2:hover{
+    -fx-text-fill: #000000;
+    -fx-cursor: hand;
+}
