--- a/src/main/resources/static/fxml/offerView.fxml
+++ b/src/main/resources/static/fxml/offerView.fxml
@@ -1,33 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox fx:id="offer" prefHeight="126.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OfferViewController">
+<VBox fx:id="offer" onMouseEntered="#hoverHandler" onMouseExited="#exitHandler" prefHeight="126.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OfferViewController">
         <children>
             <VBox fx:id="goToOffer" onMouseClicked="#goToOffer" prefHeight="202.0" prefWidth="439.0">
                 <children>
-                    <Label fx:id="offerTitle" prefHeight="36.0" prefWidth="382.0" text="Titre">
+                    <Label fx:id="offerTitle" prefHeight="36.0" prefWidth="382.0" stylesheets="@../css/offer.css" text="Titre">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </VBox.margin></Label>
+               </VBox.margin>
+               <styleClass>
+                  <String fx:value="text" />
+                  <String fx:value="title" />
+               </styleClass></Label>
                     <HBox prefHeight="100.0" prefWidth="200.0">
                         <children>
-                  <ImageView fx:id="imageOffer" fitHeight="150.0" fitWidth="164.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imageOffer" fitHeight="150.0" fitWidth="164.0" pickOnBounds="true" preserveRatio="true" styleClass="illu">
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin></ImageView>
                             <GridPane prefHeight="88.0" prefWidth="439.0">
                                 <columnConstraints>
                                     <ColumnConstraints />
-                                    <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="274.0" minWidth="10.0" prefWidth="69.39999809265137" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="493.80000000000007" minWidth="10.0" prefWidth="289.00000190734863" />
+                                    <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="274.0" minWidth="10.0" prefWidth="118.40001220703125" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="493.80000000000007" minWidth="10.0" prefWidth="247.19998779296873" />
                                 </columnConstraints>
                                 <rowConstraints>
                                     <RowConstraints maxHeight="27.79999523162842" minHeight="10.0" prefHeight="19.0" vgrow="SOMETIMES" />
@@ -38,18 +47,72 @@
                         <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="24.200007629394534" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                 <children>
-                                    <Label prefHeight="18.0" prefWidth="37.0" text="Type :" GridPane.columnIndex="1" />
-                                    <Label prefHeight="18.0" prefWidth="58.0" text="Category :" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                    <Label prefHeight="19.0" prefWidth="69.0" text="Description :" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                    <Label fx:id="offerType" text="Label" GridPane.columnIndex="2" />
-                        <Label fx:id="userOffer" onMouseClicked="#goToUser" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                                    <Label fx:id="offerCategory" layoutX="84.0" layoutY="7.0" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                                    <Label fx:id="offerDescription" layoutX="84.0" layoutY="24.0" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                                    <Label text="Price :" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                    <Label fx:id="offerPrice" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                        <Label text="User :" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label text="ZipCode :" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <Label fx:id="zipCode" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                                    <Label prefHeight="18.0" prefWidth="37.0" stylesheets="@../css/offer.css" text="Type :" GridPane.columnIndex="1">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="left" />
+                           </styleClass></Label>
+                                    <Label prefHeight="18.0" prefWidth="113.0" stylesheets="@../css/offer.css" text="Category :" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="left" />
+                           </styleClass></Label>
+                                    <Label prefHeight="19.0" prefWidth="107.0" stylesheets="@../css/offer.css" text="Description :" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="left" />
+                           </styleClass></Label>
+                                    <Label fx:id="offerType" stylesheets="@../css/offer.css" text="Label" GridPane.columnIndex="2">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="right" />
+                           </styleClass></Label>
+                        <Label fx:id="userOffer" onMouseClicked="#goToUser" stylesheets="@../css/offer.css" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="right" />
+                           </styleClass></Label>
+                                    <Label fx:id="offerCategory" layoutX="84.0" layoutY="7.0" stylesheets="@../css/offer.css" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="right" />
+                           </styleClass></Label>
+                                    <Label fx:id="offerDescription" layoutX="84.0" layoutY="24.0" stylesheets="@../css/offer.css" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="right" />
+                           </styleClass></Label>
+                                    <Label stylesheets="@../css/offer.css" text="Price :" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="left" />
+                           </styleClass></Label>
+                        <Label stylesheets="@../css/offer.css" text="User :" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="left" />
+                           </styleClass></Label>
+                        <Label stylesheets="@../css/offer.css" text="ZipCode :" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="left" />
+                           </styleClass></Label>
+                        <Label fx:id="zipCode" stylesheets="@../css/offer.css" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="right" />
+                           </styleClass></Label>
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                           <children>
+                                          <Label fx:id="offerPrice" prefHeight="18.0" prefWidth="31.0" stylesheets="@../css/offer.css" text="Label">
+                                 <styleClass>
+                                    <String fx:value="text" />
+                                    <String fx:value="right" />
+                                 </styleClass>
+                              </Label>
+                              <ImageView fitHeight="25.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </HBox>
                                 </children>
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
