--- a/src/main/resources/static/css/myProfile.css
+++ b/src/main/resources/static/css/myProfile.css
@@ -3,3 +3,16 @@
 *{
     -fx-font-family: "Poppins", sans-serif;
 }
+
+.left{
+    -fx-font-weight: bold;
+}
+
+.header{
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+}
+
+.titledpane > .title{
+    -fx-background-color: #FCD5CE;
+}
