--- a/src/main/resources/static/fxml/myProfile.fxml
+++ b/src/main/resources/static/fxml/myProfile.fxml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.MyProfileController">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.MyProfileController">
     <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    <VBox layoutY="37.0" prefHeight="683.0" prefWidth="1080.0">
       <children>
-         <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="600.0">
+         <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="600.0" spacing="5.0" styleClass="paneUp" stylesheets="@../css/myProfile.css">
             <children>
-               <Label text="Hello, " />
-               <Label fx:id="userNameBig" prefHeight="18.0" prefWidth="433.0" />
-               <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="498.0" text="Account Balance : " textAlignment="RIGHT" />
-               <Label fx:id="balance" prefHeight="18.0" prefWidth="74.0" />
+               <Label fx:id="userNameBig" prefHeight="27.0" prefWidth="439.0" styleClass="header" stylesheets="@../css/myProfile.css" />
+               <Label fx:id="balance" alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="567.0" styleClass="header" stylesheets="@../css/myProfile.css" />
+               <ImageView fx:id="florain" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
             </children>
             <padding>
                <Insets left="20.0" />
@@ -31,7 +29,7 @@
          </HBox>
          <Accordion prefHeight="639.0" prefWidth="1080.0">
            <panes>
-             <TitledPane animated="false" prefHeight="89.0" prefWidth="600.0" text="Login &amp; Security">
+             <TitledPane animated="false" prefHeight="89.0" prefWidth="600.0" styleClass="titledpane" stylesheets="@../css/myProfile.css" text="Login &amp; Security">
                   <content>
                      <HBox prefHeight="100.0" prefWidth="200.0">
                         <children>
@@ -39,35 +37,67 @@
                               <children>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="166.0" layoutY="8.0" text="Username :" />
+                                       <Label layoutX="166.0" layoutY="8.0" stylesheets="@../css/myProfile.css" text="Username :">
+                                          <styleClass>
+                                             <String fx:value="text" />
+                                             <String fx:value="left" />
+                                          </styleClass></Label>
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="170.0" layoutY="8.0" text="Password :" />
+                                       <Label layoutX="170.0" layoutY="8.0" stylesheets="@../css/myProfile.css" text="Password :">
+                                          <styleClass>
+                                             <String fx:value="text" />
+                                             <String fx:value="left" />
+                                          </styleClass></Label>
                                     </children></Pane>
                                  <Pane prefHeight="31.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="166.0" layoutY="6.0" text="Last name :" />
+                                       <Label layoutX="166.0" layoutY="6.0" stylesheets="@../css/myProfile.css" text="Last name :">
+                                          <styleClass>
+                                             <String fx:value="text" />
+                                             <String fx:value="left" />
+                                          </styleClass></Label>
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="165.0" layoutY="6.0" text="First name :" />
+                                       <Label layoutX="165.0" layoutY="6.0" stylesheets="@../css/myProfile.css" text="First name :">
+                                          <styleClass>
+                                             <String fx:value="text" />
+                                             <String fx:value="left" />
+                                          </styleClass></Label>
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="191.0" layoutY="5.0" text="Email :" />
+                                       <Label layoutX="191.0" layoutY="5.0" stylesheets="@../css/myProfile.css" text="Email :">
+                                          <styleClass>
+                                             <String fx:value="text" />
+                                             <String fx:value="left" />
+                                          </styleClass></Label>
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="177.0" layoutY="6.0" text="Address :" />
+                                       <Label layoutX="177.0" layoutY="6.0" stylesheets="@../css/myProfile.css" text="Address :">
+                                          <styleClass>
+                                             <String fx:value="text" />
+                                             <String fx:value="left" />
+                                          </styleClass></Label>
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="172.0" layoutY="8.0" text="ZIP Code :" />
+                                       <Label layoutX="172.0" layoutY="8.0" stylesheets="@../css/myProfile.css" text="ZIP Code :">
+                                          <styleClass>
+                                             <String fx:value="text" />
+                                             <String fx:value="left" />
+                                          </styleClass></Label>
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="199.0" layoutY="8.0" text="City :" />
+                                       <Label layoutX="199.0" layoutY="8.0" stylesheets="@../css/myProfile.css" text="City :">
+                                          <styleClass>
+                                             <String fx:value="text" />
+                                             <String fx:value="left" />
+                                          </styleClass></Label>
                                     </children></Pane>
                               </children>
                            </VBox>
@@ -75,42 +105,42 @@
                               <children>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="userName" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="264.0" text="Label" />
+                                       <Label fx:id="userName" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="264.0" styleClass="text" stylesheets="@../css/myProfile.css" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="password" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="254.0" text="Label" />
+                                       <Label fx:id="password" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="254.0" styleClass="text" stylesheets="@../css/myProfile.css" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="lastName" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="259.0" text="Label" />
+                                       <Label fx:id="lastName" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="259.0" styleClass="text" stylesheets="@../css/myProfile.css" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="firstName" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="266.0" text="Label" />
+                                       <Label fx:id="firstName" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="266.0" styleClass="text" stylesheets="@../css/myProfile.css" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="email" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="266.0" text="Label" />
+                                       <Label fx:id="email" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="266.0" styleClass="text" stylesheets="@../css/myProfile.css" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="address" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="262.0" text="Label" />
+                                       <Label fx:id="address" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="262.0" styleClass="text" stylesheets="@../css/myProfile.css" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="zip" layoutX="77.0" layoutY="5.0" prefHeight="17.0" prefWidth="266.0" text="Label" />
+                                       <Label fx:id="zip" layoutX="77.0" layoutY="5.0" prefHeight="17.0" prefWidth="266.0" styleClass="text" stylesheets="@../css/myProfile.css" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="city" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="264.0" text="Label" />
+                                       <Label fx:id="city" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="264.0" styleClass="text" stylesheets="@../css/myProfile.css" text="Label" />
                                     </children>
                                  </Pane>
                               </children>
@@ -119,33 +149,33 @@
                               <children>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Button fx:id="modifyUserName" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setUserName" text="Modifier" />
+                                       <Button id="button" fx:id="modifyUserName" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setUserName" stylesheets="@../css/myProfile.css" text="Edit" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Button fx:id="modifyPassword" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setPassword" text="Modifier" />
+                                       <Button id="button" fx:id="modifyPassword" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setPassword" stylesheets="@../css/myProfile.css" text="Edit" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="31.0" prefWidth="165.0">
                                     <children>
-                                       <Button fx:id="modifyLastName" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setLastName" text="Modifier" />
+                                       <Button id="button" fx:id="modifyLastName" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setLastName" stylesheets="@../css/myProfile.css" text="Edit" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Button fx:id="modifyFirstName" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setFirstName" text="Modifier" />
+                                       <Button id="button" fx:id="modifyFirstName" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setFirstName" stylesheets="@../css/myProfile.css" text="Edit" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Button fx:id="modifyEmail" layoutX="58.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#setEmail" text="Modifier" />
+                                       <Button id="button" fx:id="modifyEmail" layoutX="58.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#setEmail" stylesheets="@../css/myProfile.css" text="Edit" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0" />
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Button fx:id="modifyAddress" layoutX="59.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#setAddress" text="Modifier" />
+                                       <Button id="button" fx:id="modifyAddress" layoutX="59.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#setAddress" stylesheets="@../css/myProfile.css" text="Edit" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0" />
@@ -155,7 +185,7 @@
                      </HBox>
                   </content>
                </TitledPane>
-             <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" text="Your Orders">
+             <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" styleClass="titledpane" stylesheets="@../css/myProfile.css" text="Your Orders">
               <VBox fx:id="orderToAdd" layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
                  <children>
                     <ScrollPane prefHeight="602.0" prefWidth="1080.0">
@@ -170,7 +200,7 @@
                  </children>
               </VBox>
            </TitledPane>
-               <TitledPane animated="false" text="Your Offers">
+               <TitledPane animated="false" styleClass="titledpane" stylesheets="@../css/myProfile.css" text="Your Offers">
                   <VBox fx:id="offerToAdd" layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
                      <children>
                         <ScrollPane prefHeight="602.0" prefWidth="1080.0">
