--- a/src/main/resources/static/fxml/modifyProfile.fxml
+++ b/src/main/resources/static/fxml/modifyProfile.fxml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ModifyProfileController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ModifyProfileController">
    <children>
-      <Button fx:id="saveButton" layoutX="176.0" layoutY="128.0" mnemonicParsing="false" onMouseClicked="#submit" text="Save" />
-      <TextField fx:id="newWhat" layoutX="123.0" layoutY="31.0" />
-      <PasswordField fx:id="currentPW" layoutX="124.0" layoutY="86.0" />
-      <Label layoutX="143.0" layoutY="71.0" text="Enter your current password">
+      <Button fx:id="saveButton" layoutX="179.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#submit" text="Save" />
+      <TextField fx:id="newWhat" layoutX="123.0" layoutY="27.0" />
+      <PasswordField fx:id="currentPW" layoutX="124.0" layoutY="80.0" />
+      <Label layoutX="136.0" layoutY="65.0" text="Enter your current password">
          <font>
             <Font size="10.0" />
          </font>
       </Label>
-      <Label fx:id="errorLabel" layoutX="181.0" layoutY="115.0">
+      <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="110.0" prefHeight="14.0" prefWidth="236.0" textFill="RED">
          <font>
             <Font size="9.0" />
          </font>
