--- a/src/main/resources/static/fxml/profileForOthers.fxml
+++ b/src/main/resources/static/fxml/profileForOthers.fxml
@@ -10,9 +10,6 @@
             <children>
                 <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="600.0">
                     <children>
-                        <Label text="Hello, " />
-                        <Label fx:id="userNameBig" prefHeight="18.0" prefWidth="433.0" />
-                        <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="498.0" text="Account Balance : " textAlignment="RIGHT" />
                         <Label fx:id="balance" prefHeight="18.0" prefWidth="74.0" />
                     </children>
                     <padding>
@@ -86,12 +83,12 @@
                                 </HBox>
                             </content>
                         </TitledPane>
-                        <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" text="Your Orders">
-                            <VBox fx:id="orderToAddOther" layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
+                        <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" text="My orders ">
+                            <VBox layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
                                 <children>
                                     <ScrollPane prefHeight="602.0" prefWidth="1080.0">
                                         <content>
-                                            <VBox fx:id="orders" prefHeight="567.0" prefWidth="1078.0">
+                                            <VBox fx:id="orderToAddOther" prefHeight="567.0" prefWidth="1078.0">
                                                 <padding>
                                                     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                                 </padding>
@@ -101,12 +98,12 @@
                                 </children>
                             </VBox>
                         </TitledPane>
-                        <TitledPane animated="false" text="Your Offers">
-                            <VBox fx:id="offerToAddOther" layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
+                        <TitledPane animated="false" text="Available offers">
+                            <VBox layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
                                 <children>
                                     <ScrollPane prefHeight="602.0" prefWidth="1080.0">
                                         <content>
-                                            <VBox fx:id="offers" prefHeight="567.0" prefWidth="1078.0">
+                                            <VBox fx:id="offerToAddOther" prefHeight="567.0" prefWidth="1078.0">
                                                 <padding>
                                                     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                                 </padding>
